# mediator/src/main/kotlin/no/nav/dagpenger/rapportering/personregister/mediator/api/PersonApi.kt
@@ -5,7 +5,6 @@ import io.ktor.server.application.Application
 import io.ktor.server.auth.authenticate
 import io.ktor.server.request.receive
 import io.ktor.server.response.respond
-import io.ktor.server.routing.RoutingCall
 import io.ktor.server.routing.post
 import io.ktor.server.routing.route
 import io.ktor.server.routing.routing
@@ -17,9 +16,9 @@ private val logger = KotlinLogging.logger {}
 internal fun Application.personApi(personService: PersonService) {
     routing {
         authenticate("azureAd") {
-            route("/person") {
+            route("/hentPersonId") {
                 post {
-                    logger.info { "POST /person" }
+                    logger.info { "POST /hentPersonId" }
                     val ident = call.receive<String>()
 
                     if (!ident.matches(Regex("[0-9]{11}"))) {
@@ -38,6 +37,32 @@ internal fun Application.personApi(personService: PersonService) {
                                 )
                             }
                             ?: call.respond(HttpStatusCode.NotFound, "Finner ikke person")
+                    } catch (e: Exception) {
+                        logger.error(e) { "Kunne ikke hente person" }
+                        call.respond(HttpStatusCode.InternalServerError, "Kunne ikke hente person")
+                    }
+                }
+            }
+
+            route("/hentIdent") {
+                post {
+                    logger.info { "POST /hentIdent" }
+
+                    try {
+                        val personId = call.receive<String>().toLong()
+
+                        personService
+                            .hentIdent(personId)
+                            ?.also { ident ->
+                                call.respond(
+                                    HttpStatusCode.OK,
+                                    ident,
+                                )
+                            }
+                            ?: call.respond(HttpStatusCode.NotFound, "Finner ikke person")
+                    } catch (e: NumberFormatException) {
+                        logger.error(e) { "Ikke gyldig personId" }
+                        call.respond(HttpStatusCode.BadRequest, "Ikke gyldig personId")
                     } catch (e: Exception) {
                         logger.error(e) { "Kunne ikke hente person" }
                         call.respond(HttpStatusCode.InternalServerError, "Kunne ikke hente person")
